--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-and-background-image-fade": "^1.0.8",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
